--- a/src/components/ServicesSection/ServicesSection.module.css
+++ b/src/components/ServicesSection/ServicesSection.module.css
@@ -63,9 +63,12 @@
 }
 
 .servicesGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+  gap: 10px;
   margin-top: 40px;
 }
 
@@ -74,6 +77,7 @@
   padding: 30px;
   border-radius: 20px;
   cursor: pointer;
+  width: 350px;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   box-shadow: 0 10px 30px rgba(30, 58, 95, 0.15);
   overflow: hidden;
