--- a/src/screens/home/Home.module.css
+++ b/src/screens/home/Home.module.css
@@ -20,7 +20,7 @@
   margin: 30px auto; /* margin-top: 450px حذف شد */
   padding: 20px;
   background-color: var(--primary);
-  border-bottom: 1px solid rgba(240, 240, 240, 0.3);
+  /* border-bottom: 1px solid rgba(240, 240, 240, 0.3); */
 }
 
 [dir="rtl"] .contentWrapper {
@@ -282,12 +282,15 @@
 
 .searchBar {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
-  border-radius: 50px;
-  padding: 12px 20px;
-  margin: 40px auto;
-  max-width: 800px;
+  border-radius: 20px;
+  /* padding: 12px 20px; */
+  margin: 20px auto;
+   padding: 35px;
+  max-width: 1200px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
   transition: all 0.3s ease;
   border: 1px solid rgba(91, 9, 155, 0.1);
@@ -302,7 +305,7 @@
   background-color: #fff;
   border: 2px solid var(--primary);
   border-radius: 25px;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   margin-right: 12px;
   cursor: pointer;
   font-weight: 600;
